src/app/containers/Branding/Branding.scss
@import "~styles/variables";

.branding {
  min-height: $branding-height;
  background: $dark;
  font-weight: bold;
}

.dropdown-menu {
  position: absolute;;
  top: 60px;
  right: 0;
  z-index: 999;
}

.username,
.nav-links {
  line-height: $branding-height;
}

.nav {
  position: relative;
  color: #fff;
  line-height: $branding-height;
  display: inline-block;
}

.dropdown-recent-reading {
  margin-right: 15px;
  display: inline-block;
}

.nav--user {
  @extend .nav;
  float: right;

  .nav-item {
    margin-left: 15px;
  }
}

.nav-link {
  :global .icon {
    position: relative;
    top: 3px;
    margin-right: 5px;
  }
}

.nav-item {
  display: inline-block;
  margin-left: 35px;
}

.active {
  opacity: .5 !important;
  cursor: default;

  a {
    cursor: inherit;
    opacity: 1 !important;
    color: #fff !important;
  }
}

.recent-reading {
  margin-right: 15px;
}

